# cmake_hidden_deps

./: CMakeLists.txt  main.cpp
lib_a/: CMakeLists.txt  lib_a.cpp  lib_a.h
lib_b/: CMakeLists.txt  lib_b.cpp  lib_b.h
